[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/waterways/icons/create.svg" type="Texture2D" id=1]
[ext_resource path="res://addons/waterways/icons/select.svg" type="Texture2D" id=2]
[ext_resource path="res://addons/waterways/icons/delete.svg" type="Texture2D" id=3]
[ext_resource path="res://addons/waterways/gui/river_controls.gd" type="Script" id=4]
[ext_resource path="res://addons/waterways/gui/river_menu.gd" type="Script" id=5]

[node name="HBoxContainer" type="HBoxContainer"]
offset_right = 128.0
offset_bottom = 26.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RiverMenu" type="MenuButton" parent="."]
offset_right = 44.0
offset_bottom = 26.0
text = "River"
items = ["Generate Flow & Foam Map", null, 0, false, false, 0, 0, null, "", false, "Generate MeshInstance3D Sibling", null, 0, false, false, 1, 0, null, "", false, "Debug View", null, 0, false, false, 2, 0, null, "DebugViewMenu", false]
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="."]
offset_left = 48.0
offset_right = 52.0
offset_bottom = 26.0

[node name="Select" type="Button" parent="."]
offset_left = 56.0
offset_right = 84.0
offset_bottom = 26.0
toggle_mode = true
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="."]
offset_left = 88.0
offset_right = 116.0
offset_bottom = 26.0
toggle_mode = true
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="."]
offset_left = 120.0
offset_right = 148.0
offset_bottom = 26.0
toggle_mode = true
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="."]
offset_left = 152.0
offset_right = 156.0
offset_bottom = 26.0

[node name="Constraints" type="OptionButton" parent="."]
offset_left = 160.0
offset_right = 276.0
offset_bottom = 26.0
text = "No Constraint"
flat = true
items = ["No Constraint", null, false, 0, null, "Snap to Colliders", null, false, 1, null, "Axis X", null, false, 2, null, "Axis Y", null, false, 3, null, "Axis Z", null, false, 4, null, "Plane YZ", null, false, 5, null, "Plane XZ", null, false, 6, null, "Plane XY", null, false, 7, null]
selected = 0

[node name="LocalMode" type="CheckBox" parent="."]
offset_left = 280.0
offset_right = 381.0
offset_bottom = 26.0
text = "Local Mode"
[connection signal="pressed" from="Select" to="." method="_on_select"]
[connection signal="pressed" from="Add" to="." method="_on_add"]
[connection signal="pressed" from="Remove" to="." method="_on_remove"]
[connection signal="item_selected" from="Constraints" to="." method="_on_constraint_selected"]
[connection signal="toggled" from="LocalMode" to="." method="_on_local_mode_toggled"]
